[gd_scene load_steps=8 format=3]

[ext_resource type="Script" path="res://scenes/interiors/InteriorBase.gd" id="1_interior"]
[ext_resource type="PackedScene" path="res://actors/player/Player.tscn" id="2_player"]
[ext_resource type="Script" path="res://scenes/interiors/InteriorMerchant.gd" id="3_merchant"]
[ext_resource type="Script" path="res://systems/interact/ExitDoor.gd" id="4_exit"]
[ext_resource type="Script" path="res://systems/interact/RoomTransition.gd" id="5_transition"]
[ext_resource type="Texture2D" path="res://assets/sprites/npcs_sheet.jpg" id="6_npcs"]
[ext_resource type="PackedScene" path="res://scenes/ui/ComplianceDisplay.tscn" id="7_compliance"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_merchant"]
size = Vector2(40, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_door"]
size = Vector2(50, 20)

[ext_resource type="Shader" path="res://systems/shaders/SpriteAlpha.gdshader" id="8_alpha"]
[ext_resource type="Shader" path="res://systems/shaders/LiminalBackground.gdshader" id="9_bg_shader"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_merchant"]
shader = ExtResource("8_alpha")
shader_parameter/threshold = 0.3
shader_parameter/kill_checkerboard = true

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bg"]
shader = ExtResource("9_bg_shader")
shader_parameter/background_color = Color(0.05, 0.04, 0.08, 1)
shader_parameter/line_color = Color(0.1, 0.2, 0.3, 0.3)
shader_parameter/line_frequency = 2.0
shader_parameter/scroll_speed = 0.02

[ext_resource type="PackedScene" path="res://scenes/ui/ChoiceMenu.tscn" id="10_choices"]

[node name="ApothecaryInterior" type="Node2D"]
script = ExtResource("1_interior")
merchant_name = "Veyla Thornmend"
merchant_theme = "REMEDY PROVIDER"

[node name="Background" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_bg")
offset_left = 0.0
offset_top = 0.0
offset_right = 400.0
offset_bottom = 300.0

[node name="Floor" type="ColorRect" parent="."]
offset_left = 20.0
offset_top = 200.0
offset_right = 380.0
offset_bottom = 280.0
color = Color(0.15, 0.1, 0.08, 1)

[node name="WallDecor" type="Node2D" parent="."]

[node name="Shelf1" type="ColorRect" parent="WallDecor"]
offset_left = 30.0
offset_top = 40.0
offset_right = 100.0
offset_bottom = 60.0
color = Color(0.3, 0.2, 0.15, 1)

[node name="Shelf2" type="ColorRect" parent="WallDecor"]
offset_left = 30.0
offset_top = 80.0
offset_right = 100.0
offset_bottom = 100.0
color = Color(0.3, 0.2, 0.15, 1)

[node name="Shelf3" type="ColorRect" parent="WallDecor"]
offset_left = 300.0
offset_top = 40.0
offset_right = 370.0
offset_bottom = 60.0
color = Color(0.3, 0.2, 0.15, 1)

[node name="Shelf4" type="ColorRect" parent="WallDecor"]
offset_left = 300.0
offset_top = 80.0
offset_right = 370.0
offset_bottom = 100.0
color = Color(0.3, 0.2, 0.15, 1)

[node name="HerbJar1" type="ColorRect" parent="WallDecor"]
offset_left = 40.0
offset_top = 25.0
offset_right = 52.0
offset_bottom = 40.0
color = Color(0.2, 0.5, 0.3, 0.8)

[node name="HerbJar2" type="ColorRect" parent="WallDecor"]
offset_left = 58.0
offset_top = 25.0
offset_right = 70.0
offset_bottom = 40.0
color = Color(0.6, 0.4, 0.2, 0.8)

[node name="HerbJar3" type="ColorRect" parent="WallDecor"]
offset_left = 76.0
offset_top = 25.0
offset_right = 88.0
offset_bottom = 40.0
color = Color(0.4, 0.3, 0.5, 0.8)

[node name="HerbJar4" type="ColorRect" parent="WallDecor"]
offset_left = 40.0
offset_top = 65.0
offset_right = 52.0
offset_bottom = 80.0
color = Color(0.7, 0.5, 0.3, 0.8)

[node name="HerbJar5" type="ColorRect" parent="WallDecor"]
offset_left = 58.0
offset_top = 65.0
offset_right = 70.0
offset_bottom = 80.0
color = Color(0.3, 0.6, 0.4, 0.8)

[node name="BoneJar1" type="ColorRect" parent="WallDecor"]
offset_left = 310.0
offset_top = 25.0
offset_right = 325.0
offset_bottom = 40.0
color = Color(0.9, 0.85, 0.75, 0.9)

[node name="BoneJar2" type="ColorRect" parent="WallDecor"]
offset_left = 335.0
offset_top = 25.0
offset_right = 350.0
offset_bottom = 40.0
color = Color(0.85, 0.8, 0.7, 0.9)

[node name="BoneJar3" type="ColorRect" parent="WallDecor"]
offset_left = 310.0
offset_top = 65.0
offset_right = 325.0
offset_bottom = 80.0
color = Color(0.88, 0.82, 0.72, 0.9)

[node name="HangingHerbs" type="Node2D" parent="WallDecor"]

[node name="Herb1" type="ColorRect" parent="WallDecor/HangingHerbs"]
offset_left = 140.0
offset_top = 10.0
offset_right = 148.0
offset_bottom = 35.0
color = Color(0.25, 0.45, 0.2, 1)

[node name="Herb2" type="ColorRect" parent="WallDecor/HangingHerbs"]
offset_left = 155.0
offset_top = 10.0
offset_right = 163.0
offset_bottom = 40.0
color = Color(0.35, 0.5, 0.25, 1)

[node name="Herb3" type="ColorRect" parent="WallDecor/HangingHerbs"]
offset_left = 170.0
offset_top = 10.0
offset_right = 178.0
offset_bottom = 32.0
color = Color(0.45, 0.55, 0.3, 1)

[node name="Herb4" type="ColorRect" parent="WallDecor/HangingHerbs"]
offset_left = 220.0
offset_top = 10.0
offset_right = 228.0
offset_bottom = 38.0
color = Color(0.3, 0.48, 0.22, 1)

[node name="Herb5" type="ColorRect" parent="WallDecor/HangingHerbs"]
offset_left = 235.0
offset_top = 10.0
offset_right = 243.0
offset_bottom = 30.0
color = Color(0.4, 0.52, 0.28, 1)

[node name="Herb6" type="ColorRect" parent="WallDecor/HangingHerbs"]
offset_left = 250.0
offset_top = 10.0
offset_right = 258.0
offset_bottom = 42.0
color = Color(0.28, 0.42, 0.18, 1)

[node name="Counter" type="ColorRect" parent="."]
offset_left = 130.0
offset_top = 120.0
offset_right = 270.0
offset_bottom = 145.0
color = Color(0.35, 0.22, 0.12, 1)

[node name="CounterFront" type="ColorRect" parent="."]
offset_left = 130.0
offset_top = 145.0
offset_right = 270.0
offset_bottom = 180.0
color = Color(0.28, 0.18, 0.1, 1)

[node name="Walls" type="StaticBody2D" parent="."]
collision_layer = 1
collision_mask = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Walls"]
polygon = PackedVector2Array(0, 0, 400, 0, 400, 300, 0, 300, 0, 0, 20, 20, 20, 280, 380, 280, 380, 20, 20, 20)

[node name="CounterCollision" type="StaticBody2D" parent="."]
position = Vector2(200, 150)
collision_layer = 1
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="CounterCollision"]
position = Vector2(0, 5)
shape = SubResource("RectangleShape2D_merchant")


[node name="Merchant" type="Area2D" parent="."]
position = Vector2(200, 100)
collision_layer = 2
collision_mask = 1
script = ExtResource("3_merchant")
station_key = "apothecary"
theme = "SILENT PROTOCOL"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Merchant"]
position = Vector2(0, 25)
shape = SubResource("RectangleShape2D_merchant")

[node name="Sprite2D" type="Sprite2D" parent="Merchant"]
material = SubResource("ShaderMaterial_merchant")
texture = ExtResource("6_npcs")
region_enabled = true
region_rect = Rect2(384, 128, 128, 128)

[node name="PromptLabel" type="Label" parent="Merchant"]
offset_left = -40.0
offset_top = 50.0
offset_right = 40.0
offset_bottom = 70.0
theme_override_font_sizes/font_size = 12
text = "[E] Speak"
horizontal_alignment = 1
visible = false

[node name="ExitDoor" type="Area2D" parent="."]
position = Vector2(200, 270)
collision_layer = 2
collision_mask = 1
script = ExtResource("4_exit")
prompt_text = "[E] Exit"

[node name="StairsDown" type="Area2D" parent="."]
position = Vector2(40, 220)
collision_layer = 2
collision_mask = 1
script = ExtResource("5_transition")
target_scene = "res://scenes/interiors/ApothecaryBasement.tscn"
target_room = "Basement Lab"
spawn_position = Vector2(240, 180)
floor_num = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StairsDown"]
shape = SubResource("RectangleShape2D_door")

[node name="Visual" type="ColorRect" parent="StairsDown"]
offset_left = -20.0
offset_top = -10.0
offset_right = 20.0
offset_bottom = 10.0
color = Color(0.15, 0.1, 0.08, 1)

[node name="Label" type="Label" parent="StairsDown/Visual"]
layout_mode = 0
offset_top = 10.0
offset_right = 40.0
theme_override_font_sizes/font_size = 10
text = "DOWN"
horizontal_alignment = 1

[node name="PromptLabel" type="Label" parent="StairsDown"]
offset_left = -40.0
offset_top = -30.0
offset_right = 40.0
offset_bottom = -10.0
theme_override_font_sizes/font_size = 10
text = "[E] Go Down"
horizontal_alignment = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExitDoor"]
shape = SubResource("RectangleShape2D_door")


[node name="DoorVisual" type="ColorRect" parent="ExitDoor"]
offset_left = -25.0
offset_top = -10.0
offset_right = 25.0
offset_bottom = 10.0
color = Color(0.4, 0.28, 0.15, 1)

[node name="DoorFrame" type="ColorRect" parent="ExitDoor"]
offset_left = -30.0
offset_top = -15.0
offset_right = 30.0
offset_bottom = -10.0
color = Color(0.25, 0.15, 0.08, 1)

[node name="PromptLabel" type="Label" parent="ExitDoor"]
offset_left = -40.0
offset_top = 15.0
offset_right = 40.0
offset_bottom = 35.0
theme_override_font_sizes/font_size = 12
text = "[E] Exit"
horizontal_alignment = 1
visible = false

[node name="SpawnPoint" type="Marker2D" parent="."]
position = Vector2(200, 230)

[node name="Player" parent="." instance=ExtResource("2_player")]
position = Vector2(200, 230)

[node name="UI" type="CanvasLayer" parent="."]

[node name="ComplianceDisplay" parent="UI" instance=ExtResource("7_compliance")]

[node name="ChoiceMenu" parent="UI" instance=ExtResource("10_choices")]
visible = false

[node name="MerchantPanel" type="PanelContainer" parent="UI"]
anchors_preset = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 180.0
offset_bottom = 70.0

[node name="VBox" type="VBoxContainer" parent="UI/MerchantPanel"]
layout_mode = 2

[node name="MerchantNameLabel" type="Label" parent="UI/MerchantPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "The Apothecary"

[node name="ThemeLabel" type="Label" parent="UI/MerchantPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
theme_override_colors/font_color = Color(0.4, 0.7, 0.5, 1)
text = "FOLK MAGIC"

[node name="DialoguePanel" type="PanelContainer" parent="UI"]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -180.0
offset_top = -100.0
offset_right = 180.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0

[node name="VBox" type="VBoxContainer" parent="UI/DialoguePanel"]
layout_mode = 2

[node name="DialogueLabel" type="Label" parent="UI/DialoguePanel/VBox"]
layout_mode = 2
text = "..."
autowrap_mode = 2

[node name="ControlsHint" type="Label" parent="UI"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -30.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 12
text = "WASD: Move | E: Interact"
horizontal_alignment = 2

